# half_edge

./: .travis.yml  Cargo.toml  README.md
src/: id_internals.rs  iterators.rs  kernel.rs  lib.rs
